# LASP-D3

./: .clang-format  .gitignore  CMakeLists.txt  gen_constants.h  makefile  readme.md
.github/workflows/: cmake-multi-platform.yaml
data/: dCN.py  generate_constants.py  load.py  parameters.f90  test.c  test.py
examples/: ase_mace_laspd3.py  d3_cffi.py  example.md
examples/structures/: 192.extxyz
src/: concepts.h  constants.h  constants_include.h  d3.cu  d3.h  d3_buffer.cu  d3_buffer.cuh  d3_cffi.py  d3_internal.h  d3_kernel.cu  d3_kernel.cuh  d3_types.h  fortran_api.f90  fortran_d3.f90  main.cpp  modules.h  parser.cpp  test.c  test_d3.h  test_d3_cffi.py
test/: acetone.arc  d3_test.cpp  full_test.cpp  generate_full_tests.py  grand_test.cpp  grand_test.h
